# duijie-codebase-memory-mcp

./: .clang-format  .clang-tidy  .cppcheck  CONTRIBUTING.md  Makefile.cbm  README.md  SECURITY.md  THIRD_PARTY.md  install.ps1  install.sh  server.json
.github/workflows/: _build.yml  _lint.yml  _security.yml  codeql.yml  dry-run.yml  nightly-soak.yml  release.yml  scorecard.yml
cmd/codebase-memory-mcp/: main.go
docs/: BENCHMARK.md
internal/cbm/: ac.c  ac.h  arena.h  cbm.c  (+28 more)
pkg/pypi/: README.md  pyproject.toml
pkg/pypi/src/codebase_memory_mcp/: __init__.py  _cli.py
scripts/: build.sh  env.sh  extract_nomic_vectors.py  port_clsp_tests.py  security-allowlist.txt  security-audit.sh  security-fuzz-random.sh  setup-windows.ps1  setup.sh  smoke-test.sh  soak-test.sh  test.sh  test_mcp_rapid_init.py
src/: main.c
test-infrastructure/: Dockerfile.alpine  Dockerfile.mingw  docker-compose.yml  run.sh
tests/: smoke_guard.sh  test_ac.c  test_arena.c  test_c_lsp.c  test_cli.c  test_configlink.c  test_cypher.c  test_discover.c  test_dyn_array.c  test_extraction.c  test_framework.h  test_gitignore.c  test_go_lsp.c  test_graph_buffer.c  test_hash_table.c  test_httplink.c  test_incremental.c  test_infrascan.c  test_integration.c  test_language.c  test_log.c  test_lz4.c  test_main.c  test_mcp.c  test_mem.c  test_parallel.c  test_pipeline.c  test_platform.c  test_registry.c  test_security.c  test_sqlite_writer.c  test_store_arch.c  test_store_edges.c  test_store_nodes.c  test_store_search.c  test_str_intern.c  test_str_util.c  test_traces.c  test_userconfig.c  test_vmem.c  (+2 more)
(+124 files in other folders)
