[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebase-memory-mcp"
version = "0.6.0"
description = "Fast code intelligence engine for AI coding agents — single static binary MCP server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["mcp", "claude", "code-intelligence", "codebase", "memory", "ai", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/DeusData/codebase-memory-mcp"
Repository = "https://github.com/DeusData/codebase-memory-mcp"
Issues = "https://github.com/DeusData/codebase-memory-mcp/issues"

[project.scripts]
codebase-memory-mcp = "codebase_memory_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codebase_memory_mcp"]
